--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/elrodjosh96/Employee-Tracker#readme",
   "dependencies": {
+    "console.table": "^0.10.0",
     "inquirer": "^8.2.0",
-    "mysql": "^2.18.1"
+    "mysql2": "^2.3.3"
   }
 }
